Fix background shift on iOS Safari toolbar resize, match bar color to image

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,9 +36,11 @@ main {
 
 .background {
   position: fixed;
-  inset: 0;
-  width: 100%;
-  height: 100%;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  height: 100lvh;
   background-image: url("../assets/img/pexels-fredrikwandem-19427621.jpg");
   background-size: cover;
   background-position: center;
